--- a/styles/header.scss
+++ b/styles/header.scss
@@ -7,8 +7,8 @@
   }
 
   .nav__list {
-    margin-top: 6px;
-    margin-right: 35.5px;
+    margin-top: -20px;
+    // margin-right: 35.5px; //!!!!!!!!!!!!!!!!!!!!!!!!!!
   }
 }
 
@@ -48,7 +48,7 @@
   gap: 14px;
   &__img {
     max-width: 60px;
-    height: 60px;
+    height: 58px;
   }
 }
 
