--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -52,7 +52,7 @@
     @media screen and (max-width: $media-480) {
       margin-bottom: 8px;
       letter-spacing: -0.3125px;
-      margin: 0;
+      margin-top: 30px; //!!!!!!!!!!!!!
     }
   }
 
@@ -97,10 +97,6 @@
     width: 796px;
     height: 448px;
 
-    // @media screen and (max-width: $media-1440) {
-    //   top: 24px;
-    //   right: 0;
-    // }
     @media screen and (max-width: $media-855) {
       position: static;
     }
