--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -52,7 +52,7 @@
     @media screen and (max-width: $media-480) {
       margin-bottom: 8px;
       letter-spacing: -0.3125px;
-      margin-top: 30px; //!!!!!!!!!!!!!
+      // margin-top: 30px; //!!!!!!!!!!!!!
     }
   }
 
