--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
   }
 }
 .header .nav__list {
-  margin-top: -20px;
+  margin-top: -10px;
 }
 
 .header__inner {
@@ -18,7 +18,7 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   transition: padding 0.3s, background-color 0.3s;
 }
 .header__inner--sticky {
