--- a/styles/header.scss
+++ b/styles/header.scss
@@ -7,7 +7,7 @@
   }
 
   .nav__list {
-    margin-top: -20px;
+    margin-top: -10px;
     // margin-right: 35.5px; //!!!!!!!!!!!!!!!!!!!!!!!!!!
   }
 }
@@ -19,7 +19,7 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   transition: padding 0.3s, background-color 0.3s;
 
   &--sticky {
