--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,7 @@
 .mobile-menu-icon .fa-times {
   font-size: clamp(22px, 1.1898rem + 0.9259vw, 32px);
   color: rgba(44, 50, 65, 0.6);
+  margin-left: 2px;
 }
 
 .mobile-menu {
