--- a/styles/engage.scss
+++ b/styles/engage.scss
@@ -11,34 +11,11 @@
   }
   @media screen and (min-width: $media-900) {
     display: none;
-    // padding: 40px 15px;
   }
-
-  // ===========================
-  // display: none;
-  // padding: 40px 15px;
-  // background-color: $color-light;
-
-  // @media screen and (max-width: $media-768) {
-  //   @include flex-column(30px);
-  //   text-align: center;
-  //   align-items: center;
-  //   gap: 40px;
-  //   padding: 40px 0 4px;
-  // }
-  // @media screen and (max-width: $media-480) {
-  //   text-align: left;
-  // }
-  // @media screen and (max-width: $media-768) {
-  //   .engage__content {
-  //   }
-  // }
 
   &__content {
     padding: 0 15px;
   }
-
-  // =========================================
 
   &__content:not(:last-child) {
     width: 100%;
@@ -58,10 +35,7 @@
     font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
     max-width: 462px;
     margin-bottom: 22px;
-
-    @media screen and (max-width: $media-768) {
-      margin: 0 auto;
-    }
+    margin: 0 auto;
   }
 
   &__content-description {
@@ -69,23 +43,20 @@
     max-width: 462px;
     letter-spacing: 0.85px;
     line-height: 1.5;
-    margin-bottom: 2px;
-
-    @media screen and (max-width: $media-768) {
-      margin: 22px auto 0;
-    }
+    // margin-bottom: 2px;
+    margin: 22px auto 0;
   }
 
   &__content-figure {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0;
+    // margin: 0;
     margin-bottom: 40px;
   }
 
   &__content-figure-image {
-    margin: 0;
+    // margin: 0;
     margin-top: 30px;
   }
 
@@ -93,7 +64,7 @@
     font-size: 14px;
     max-width: 100%;
     color: rgba($color-black, 0.6);
-    margin: 0;
+    // margin: 0;
     margin-top: 19px;
   }
 }
